--- a/DOML.net/DOML.net/DOML.net.csproj
+++ b/DOML.net/DOML.net/DOML.net.csproj
@@ -8,6 +8,7 @@
     <StartupObject />
     <ApplicationIcon />
     <OutputType>Library</OutputType>
+    <Configurations>Debug;Release;Test</Configurations>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -19,6 +20,10 @@
     <DefineConstants>TRACE;DEBUG;NETSTANDARD1_3</DefineConstants>
     <PlatformTarget>AnyCPU</PlatformTarget>
     <WarningLevel>1</WarningLevel>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Test|AnyCPU'">
+    <Optimize>true</Optimize>
   </PropertyGroup>
 
   <ItemGroup>
