--- a/DOML.net/Test/Test.csproj
+++ b/DOML.net/Test/Test.csproj
@@ -12,4 +12,8 @@
     <ProjectReference Include="..\StaticBinding\StaticBindings.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="StaticBindings\" />
+  </ItemGroup>
+
 </Project>
