--- a/DOML.net/ReflectionBindings/ReflectionBindings.csproj
+++ b/DOML.net/ReflectionBindings/ReflectionBindings.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netstandard1.3</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard1.3\ReflectionBindings.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\DOML.net\DOML.net.csproj" />
   </ItemGroup>
