--- a/DOML.net/StaticBinding/StaticBindings.csproj
+++ b/DOML.net/StaticBinding/StaticBindings.csproj
@@ -4,6 +4,11 @@
     <TargetFramework>netstandard1.3</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>bin\Debug\netstandard1.3\StaticBindings.xml</DocumentationFile>
+    <DefineConstants>DEBUG;TRACE;NETSTANDARD1_3</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\DOML.net\DOML.net.csproj" />
   </ItemGroup>
