--- a/DOML.net/DOML.net/DOML.net.csproj
+++ b/DOML.net/DOML.net/DOML.net.csproj
@@ -33,6 +33,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Types.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
   </ItemGroup>
 
