--- a/DOML.net/Test/Test.csproj
+++ b/DOML.net/Test/Test.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <StartupObject>Test.UnitTests.Program</StartupObject>
     <Configurations>Debug;Release;Test</Configurations>
     <ApplicationIcon />
+    <ReleaseVersion>0.3</ReleaseVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Test|AnyCPU'">
@@ -32,4 +33,13 @@
     <PackageReference Include="BenchmarkDotNet" Version="0.10.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="test.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>test.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="test.Designer.cs" />
+  </ItemGroup>
 </Project>
